# src/main/resources/api.yaml
@@ -1253,7 +1253,7 @@ paths:
             schema:
               type: object
               properties:
-                stock_ids:
+                warehouse_ids:
                   type: array
                   items:
                     type: string
@@ -1272,7 +1272,7 @@ paths:
                     properties:
                       pos:
                         $ref: "#/components/schemas/POS"
-                      stockIds:
+                      warehouseIds:
                         type: array
                         items:
                           type: string
@@ -1301,7 +1301,7 @@ paths:
             schema:
               type: object
               properties:
-                stockId:
+                warehouseId:
                   type: array
                   items:
                     type: string
@@ -1309,7 +1309,7 @@ paths:
                   $ref: "#/components/schemas/POS"
       responses:
         '200':
-          description: Returns updated pos with stock ids
+          description: Returns updated pos with warehouse ids
           content:
             application/json:
               schema:
@@ -1320,7 +1320,7 @@ paths:
                     properties:
                       pos:
                         $ref: "#/components/schemas/POS"
-                      stockIds:
+                      warehouseIds:
                         type: array
                         items:
                           type: string
@@ -1363,7 +1363,7 @@ paths:
                     properties:
                       pos:
                         $ref: "#/components/schemas/POS"
-                      stockIds:
+                      warehouseIds:
                         type: array
                         items:
                           type: string
@@ -1399,7 +1399,7 @@ paths:
                     properties:
                       pos:
                         $ref: "#/components/schemas/POS"
-                      stockIds:
+                      warehouseIds:
                         type: array
                         items:
                           type: string
@@ -1446,7 +1446,7 @@ paths:
                         properties:
                           pos:
                             $ref: "#/components/schemas/POS"
-                          stockIds:
+                          warehouseIds:
                             type: array
                             items:
                               type: string
@@ -1455,7 +1455,7 @@ paths:
         default:
           description: unexpected error
 
-  /api/v1/establishemnt/create:
+  /api/v1/establishment/create:
     post:
       summary: Create an Establishment
       operationId: establishment-create
@@ -1472,7 +1472,7 @@ paths:
               properties:
                 establishment:
                   $ref: "#/components/schemas/Establishment"
-                stock_ids:
+                warehouse_ids:
                   type: array
                   items:
                     type: string
@@ -1489,7 +1489,7 @@ paths:
                     properties:
                       establishment:
                         $ref: "#/components/schemas/Establishment"
-                      stock_ids:
+                      warehouse_ids:
                         type: array
                         items:
                           type: string
@@ -1503,7 +1503,7 @@ paths:
         default:
           description: unexpected error
 
-  /api/v1/establishemnt/update:
+  /api/v1/establishment/update:
     put:
       summary: Updates the Establishment
       operationId: establishment-update
@@ -1520,7 +1520,7 @@ paths:
               properties:
                 establishment:
                   $ref: "#/components/schemas/Establishment"
-                stock_ids:
+                warehouse_ids:
                   type: array
                   items:
                     type: string
@@ -1537,7 +1537,7 @@ paths:
                     properties:
                       establishment:
                         $ref: "#/components/schemas/Establishment"
-                      stock_ids:
+                      warehouse_ids:
                         type: array
                         items:
                           type: string
@@ -1586,7 +1586,7 @@ paths:
                     items:
                       type: object
                       properties:
-                        stock_ids:
+                        warehouse_ids:
                           type: array
                           items:
                             type: string
@@ -1630,7 +1630,7 @@ paths:
                   data:
                     type: object
                     properties:
-                      stock_ids:
+                      warehouse_ids:
                         type: array
                         items:
                           type: string
@@ -1673,7 +1673,7 @@ paths:
                   data:
                     type: object
                     properties:
-                      stock_ids:
+                      warehouse_ids:
                         type: array
                         items:
                           type: string
@@ -1691,10 +1691,10 @@ paths:
 
 
 
-  /api/v1/stock/create:
+  /api/v1/warehouse/create:
     post:
-      summary: Creates a stock
-      operationId: stock-create
+      summary: Creates a warehouse
+      operationId: warehouse-create
       security:
         - OAuth2: [read, write, profile]
         - TenantSecurity: [read, write, profile]
@@ -1706,15 +1706,15 @@ paths:
             schema:
               type: object
               properties:
-                stock:
-                  $ref: "#/components/schemas/Stock"
+                warehouse:
+                  $ref: "#/components/schemas/Warehouse"
                 posIds:
                   type: array
                   items:
                     type: string
       responses:
         '200':
-          description: Returns created stock
+          description: Returns created warehouse
           content:
             application/json:
               schema:
@@ -1723,12 +1723,9 @@ paths:
                   data:
                     type: object
                     properties:
-                      stock:
-                        $ref: "#/components/schemas/Stock"
-                      posIds:
-                        type: array
-                        items:
-                          type: string
+                      warehouse:
+                        $ref: "#/components/schemas/Warehouse"
+
                   status:
                     type: string
                     enum: [Success, Error]
@@ -1739,10 +1736,10 @@ paths:
         default:
           description: unexpected error
 
-  /api/v1/stock/update:
+  /api/v1/warehouse/update:
     put:
-      summary: Update the stock
-      operationId: stock-update
+      summary: Update the warehouse
+      operationId: warehouse-update
       security:
         - OAuth2: [read, write, profile]
         - TenantSecurity: [read, write, profile]
@@ -1754,15 +1751,15 @@ paths:
             schema:
               type: object
               properties:
-                stock:
-                  $ref: "#/components/schemas/Stock"
+                warehouse:
+                  $ref: "#/components/schemas/Warehouse"
                 posIds:
                   type: array
                   items:
                     type: string
       responses:
         '200':
-          description: Returns the updated stock
+          description: Returns the updated warehouse
           content:
             application/json:
               schema:
@@ -1771,8 +1768,8 @@ paths:
                   data:
                     type: object
                     properties:
-                      stock:
-                        $ref: "#/components/schemas/Stock"
+                      warehouse:
+                        $ref: "#/components/schemas/Warehouse"
                       posIds:
                         type: array
                         items:
@@ -1787,10 +1784,10 @@ paths:
         default:
           description: unexpected error
 
-  /api/v1/stock-list:
+  /api/v1/warehouse-list:
     get:
-      summary: Returns stock list
-      operationId: stock-list
+      summary: Returns warehouse list
+      operationId: warehouse-list
       security:
         - OAuth2: [read, write, profile]
         - TenantSecurity: []
@@ -1800,18 +1797,18 @@ paths:
         - in: query
           name: page
           required: false
-          description: required stock list page
+          description: required warehouse list page
           schema:
             type: integer
         - in: query
           name: page_size
           required: false
-          description: required stock list page_size
+          description: required warehouse list page_size
           schema:
             type: integer
       responses:
         '200':
-          description: Got stock list
+          description: Got warehouse list
           content:
             application/json:
               schema:
@@ -1826,8 +1823,8 @@ paths:
                           type: array
                           items:
                             type: string
-                        stock:
-                          $ref: "#/components/schemas/Stock"
+                        warehouse:
+                          $ref: "#/components/schemas/Warehouse"
                   status:
                     type: string
                     enum: [Success, Error]
@@ -1838,10 +1835,10 @@ paths:
         default:
           description: unexpected error
 
-  /api/v1/stock/delete/{id}:
+  /api/v1/warehouse/delete/{id}:
     delete:
-      summary: Deleting the stock
-      operationId: stock-delete
+      summary: Deleting the warehouse
+      operationId: warehouse-delete
       security:
         - OAuth2: [read, write, profile]
         - TenantSecurity: []
@@ -1875,10 +1872,10 @@ paths:
         default:
           description: unexpected error
 
-  /api/v1/stock/{id}:
+  /api/v1/warehouse/{id}:
     get:
-      summary: Returns stock according to id in path
-      operationId: stock-get
+      summary: Returns warehouse according to id in path
+      operationId: warehouse-get
       security:
         - OAuth2: [read, write, profile]
         - TenantSecurity: []
@@ -1892,14 +1889,14 @@ paths:
             type: string
       responses:
         '200':
-          description: Returns Stock according to id in path
+          description: Returns Warehouse according to id in path
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   data:
-                    $ref: "#/components/schemas/Stock"
+                    $ref: "#/components/schemas/Warehouse"
                   status:
                     type: string
                     enum: [Success, Error]
@@ -3068,7 +3065,7 @@ components:
         price_currency_id:
           type: string
 
-    Stock:
+    Warehouse:
       type: object
       properties:
         id:
@@ -3089,9 +3086,13 @@ components:
           type: string
         address:
           type: string
-        phone_number:
+        phone:
           type: string
         pos_ids:
+          type: array
+          items:
+            type: string
+        warehouse_id:
           type: array
           items:
             type: string
